syntax = "proto3";
package stride.stakeibc;
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/Stride-Labs/stride/v9/x/stakeibc/types";

message ValidatorExchangeRate {
  string internal_tokens_to_shares_rate = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  uint64 epoch_number = 2;
}

message Validator {
  string name = 1;
  string address = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string delegation_amt = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 weight = 6;
  ValidatorExchangeRate internal_exchange_rate = 7;
  reserved 3, 4;
}
